--- a/_publications/2024-06-16-NoisyGL.md
+++ b/_publications/2024-06-16-NoisyGL.md
@@ -3,7 +3,7 @@ title: "NoisyGL: A Comprehensive Benchmark for Graph Neural Networks under Label
 collection: publications
 category: conferences
 permalink: /publication/2024-06-16-NoisyGL
-excerpt: 'This paper is a Comprehensive Benchmark of Graph Neural Networks under Label noise.'
+excerpt: 'This paper is the first Comprehensive Benchmark of Graph Neural Networks under Label noise.'
 date: 2024-06-16
 venue: 'Advances in Neural Information Processing Systems 37 (NeurIPS 2024)'
 paperurl: 'https://papers.nips.cc/paper_files/paper/2024/hash/436ffa18e7e17be336fd884f8ebb5748-Abstract-Datasets_and_Benchmarks_Track.html'
